--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ data/NO2_SEA_Land/NO2_raw_daily/2020_2021_daily_NO2.csv
 code/5219_data preprocessing_MLP.ipynb
 data/Preprocessed_data_ML.csv
 stream.py
+apps/SHAP.py
