--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-plotly == 5.3.1   
-tensorflow == 2.6.0  
-keras == 2.6.0   
-scikit-learn == 1.0.2     
+plotly==5.3.1   
+tensorflow==2.5.0  
+keras==2.6.0   
+scikit-learn==1.0.2 
+shap==0.40.0     
