--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,5 @@ data/weather_MLP.csv
 data/weather.csv
 data/NO2_SEA_Land/NO2_raw_daily/2020_2021_daily_NO2.csv
 data/Preprocessed_data_ML.csv
-stream.py
-apps/SHAP.py
 data/merged_data.csv
+data/mobility_weekly_data.csv
