--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ data/NO2_SEA_Land/NO2_raw_daily/2020_2021_daily_NO2.csv
 data/Preprocessed_data_ML.csv
 data/merged_data.csv
 data/mobility_weekly_data.csv
+code/Collecting_haze_trends.ipynb
